==> riot-ci/RIOT/cpu/cc3200/periph/gpio.c <==
#include <stdbool.h>
#include <stdint.h>
#include "cpu.h"
#include "periph/gpio.h"
#include "vendor/hw_gpio.h"
#include "vendor/hw_memmap.h"
#include "vendor/hw_ocp_shared.h"
#include "vendor/rom.h"
#define ENABLE_DEBUG (0)
#include "debug.h"
#define GPIO_PINS_PER_PORT 8        /**< Number of pins per port */
#define GPIO_DIR_MASK 0x00000001    /**< GPIO direction configuration mask */
#define PIN_MODE_GPIO 0x00000000
#define PAD_MODE_MASK 0x0000000F /**< GPIO mask for setting pin mode */
#define PAD_STRENGTH_MASK 0x000000E0
#define PAD_TYPE_MASK 0x00000310
#define PAD_CONFIG_BASE ((OCP_SHARED_BASE + OCP_SHARED_O_GPIO_PAD_CONFIG_0))
#define INT_GPIOA4 20
#define PAD_CONFIG_REG(pin) \
    (*((volatile uint32_t *)((gpio_pin << 2) + PAD_CONFIG_BASE)))

int gpio_init(gpio_t dev, gpio_mode_t mode)
{
    /* get pin mask */
    uint8_t ipin = gpio_pin_mask(dev);

    /* make sure pin is in the default state (this is quicker then reading */
    /* first) */
    gpio_init_af(dev, PIN_STRENGTH_2MA, PIN_TYPE_STD);
    gpio_pin_mode_set(dev, PIN_MODE_GPIO);

    /* set gpio direction IN/OUT */
    if (mode & GPIO_DIR_MASK) {
        /* out */
        gpio(dev)->dir |= ipin;
    }
    else {
        /* in */
        gpio(dev)->dir &= ipin;
    }

    /* set strength and drain mode */
    gpio_init_af(dev, PIN_STRENGTH_2MA, mode & PAD_TYPE_MASK);

    return 0;
}

int gpio_init_int(gpio_t dev, gpio_mode_t mode, gpio_flank_t flank,
                  gpio_cb_t cb, void *arg)
{
    /* Note: gpio_init() also checks if the gpio is enabled. */
    int res = gpio_init(dev, mode);

    if (res != 0) {
        return res;
    }

    assert(flank != GPIO_NONE);

    uint8_t portNum = gpio_port_num(dev);
    uint8_t pinNum = gpio_pin_num(dev);
    uint8_t bit = gpio_pin_mask(dev);
    /* convert to number since we use the address for later compare */
    uint32_t portBase = (uint32_t)gpio_port_by_num(portNum);

    /* store callback information; */
    isr_ctx[portNum][pinNum].cb = cb;
    isr_ctx[portNum][pinNum].arg = arg;

    ROM_IntMasterDisable();

    /* clear interrupt specified pin */
    gpio(dev)->icr = bit;

    /* configure active flanks */
    gpio(dev)->ibe =
        (flank & GPIO_BOTH) ? gpio(dev)->ibe | bit : gpio(dev)->ibe & ~bit;
    gpio(dev)->is = (flank & GPIO_VALUE_LOW) ? gpio(dev)->is | bit :
                    gpio(dev)->is & ~bit;
    gpio(dev)->iev = (flank & GPIO_RISING) ? gpio(dev)->iev | bit :
                     gpio(dev)->iev & ~bit;

    /* enable gpio interripts */
    gpio(dev)->im |= bit;

    /* register interrupt handlers */
    /* TODO: replace with cortex common */
    switch (portBase) {
        case GPIOA0_BASE:
            ROM_GPIOIntRegister(portBase, isr_gpio_a0);
            ROM_IntEnable(INT_GPIOA0);
            break;
        case GPIOA1_BASE:
            ROM_GPIOIntRegister(portBase, isr_gpio_a1);
            ROM_IntEnable(INT_GPIOA1);
            break;
        case GPIOA2_BASE:
            ROM_GPIOIntRegister(portBase, isr_gpio_a2);
            ROM_IntEnable(INT_GPIOA2);
            break;
        case GPIOA3_BASE:
            ROM_GPIOIntRegister(portBase, isr_gpio_a3);
            ROM_IntEnable(INT_GPIOA3);
            break;
        case GPIOA4_BASE:
            ROM_GPIOIntRegister(portBase, isr_gpio_a4);
            ROM_IntEnable(INT_GPIOA4);
            break;
    }

    ROM_IntMasterEnable();

    return 0;
}

void gpio_write(gpio_t dev, int value)
{
    uint8_t port = gpio_port_num(dev);
    uint8_t ipin = gpio_pin_mask(dev);
    uint32_t portAddr = (uint32_t)gpio_port_by_num(port);

    /* write to pin at portBase + pinOffset */
    HWREG(portAddr + (ipin << 2)) =
        _gpio_pin_value_mask(pin_to_gpio_num[gpio_pin_num(dev)], value);
}

int gpio_read(gpio_t dev)
{
    uint8_t port = gpio_port_num(dev);
    uint8_t ipin = gpio_pin_mask(dev);
    uint32_t portAddr = (uint32_t)gpio_port_by_num(port);

    /* read from pin at portBase + pinOffset */
    /* cast value to int {0, 1} */
    return (HWREG(portAddr + (ipin << 2)) ? GPIO_VALUE_HIGH : GPIO_VALUE_LOW);
}
