==> riot-ci/RIOT/cpu/esp32/periph/gpio.c <==
#define ENABLE_DEBUG (0)
#include "debug.h"
#include <stdbool.h>
#include "log.h"
#include "periph/gpio.h"    /* RIOT gpio.h */
#include "esp/common_macros.h"
#include "rom/ets_sys.h"
#include "soc/gpio_reg.h"
#include "soc/gpio_sig_map.h"
#include "soc/gpio_struct.h"
#include "soc/io_mux_reg.h"
#include "soc/rtc_io_reg.h"
#include "soc/rtc_io_struct.h"
#include "xtensa/xtensa_api.h"
#include "esp_common.h"
#include "adc_arch.h"
#include "gpio_arch.h"
#include "irq_arch.h"
#include "syscalls.h"
#define GPIO_PRO_CPU_INTR_ENA      (BIT(2))
#define FUN_GPIO   2 /* the function number for all GPIOs */
#define GPIO_PIN_SET(b) if (b < 32) GPIO.out_w1ts = BIT(b); else GPIO.out1_w1ts.val = BIT(b-32)
#define GPIO_PIN_CLR(b) if (b < 32) GPIO.out_w1tc = BIT(b); else GPIO.out1_w1tc.val = BIT(b-32)
#define GPIO_REG_BIT_GET(l,h,b) ((b < 32) ? GPIO.l & BIT(b) : GPIO.h.val & BIT(b-32))
#define GPIO_REG_BIT_SET(l,h,b) if (b < 32) GPIO.l |=  BIT(b); else GPIO.h.val |=  BIT(b-32)
#define GPIO_REG_BIT_CLR(l,h,b) if (b < 32) GPIO.l &= ~BIT(b); else GPIO.h.val &= ~BIT(b-32)
#define GPIO_REG_BIT_XOR(l,h,b) if (b < 32) GPIO.l ^=  BIT(b); else GPIO.h.val ^=  BIT(b-32)
#define REG_SET_CLR_BIT(c,r,f) if (c) REG_SET_BIT(r,f); else REG_CLR_BIT(r,f)

int gpio_init(gpio_t pin, gpio_mode_t mode)
{
    CHECK_PARAM_RET(pin < GPIO_PIN_NUMOF, -1);

    /* check if the pin can be used as GPIO or if it is used for something else */
    if (_gpio_pin_usage[pin] != _GPIO) {
        LOG_ERROR("GPIO%d is already used as %s signal\n", pin,
                  _gpio_pin_usage_str[_gpio_pin_usage[pin]]);
        return -1;
    }

    /* check additional limitations for GPIOs 34 ... 39 */
    if (pin > GPIO33) {
        switch (mode) {
            case GPIO_OUT:
            case GPIO_OD:
            case GPIO_OD_PU:
            case GPIO_IN_OUT:
            case GPIO_IN_OD:
            case GPIO_IN_OD_PU:
                /* GPIOs 34 ... 39 cannot be used as output */
                LOG_ERROR("GPIO%d can only be used as input\n", pin);
                return -1;

            case GPIO_IN_PD:
            case GPIO_IN_PU:
                /* GPIOs 34 ... 39 have no software controlable pullups/pulldowns */
                LOG_ERROR("GPIO%d has no pullups/pulldowns\n", pin);
                return -1;
            default: break;
        }
    }

    const struct _rtc_gpio_t* rtc = (_gpio_to_rtc[pin] != -1) ?
                                    &_rtc_gpios[_gpio_to_rtc[pin]] : NULL;

    /* if pin is a RTC_GPIO, reset RTC function to route RTC pin to GPIO pin */
    if (rtc) {
        REG_CLR_BIT(rtc->reg, BIT(rtc->mux));
   }

    switch (mode) {

        case GPIO_IN:
        case GPIO_IN_PD:
        case GPIO_IN_PU:
            /* according to Technical Reference it is not necessary
               to configure the GPIO matrix to read GPIOs from
               GPIO_IN_REG/GPIO_IN1_REG */
            #if 0
            /* configure the GPIO matrix for the inputs */
            GPIO.func_in_sel_cfg[signal].sig_in_sel = 0; /* route through GPIO matrix */
            GPIO.func_in_sel_cfg[signal].sig_in_inv = 0; /* do not invert input */
            GPIO.func_in_sel_cfg[signal].func_sel = pin; /* connect signal to GPIOx */
            #endif

            /* disable the output for input-only signals */
            GPIO.func_out_sel_cfg[pin].oen_sel = 1;
            GPIO_REG_BIT_SET(enable_w1tc, enable1_w1tc, pin);

            /* set the FUN_IE bit for input */
            REG_SET_BIT(_gpio_to_iomux_reg[pin], FUN_IE);

            /* FUN_GPIO / FUN_WPU / FUN_WPD are set later */
            break;

        case GPIO_OUT:
        case GPIO_OD:
        case GPIO_OD_PU:
            /* configure GPIO signal in the GPIO matrix */
            GPIO.func_out_sel_cfg[pin].func_sel = SIG_GPIO_OUT_IDX;

            /* enable the output */
            GPIO.func_out_sel_cfg[pin].oen_sel = 1;
            GPIO_REG_BIT_SET(enable_w1ts, enable1_w1ts, pin);

            /* set pad driver to one for open drain outputs */
            GPIO.pin[pin].pad_driver = (mode == GPIO_OD || mode == GPIO_OD_PU) ? 1 : 0;

            /* set pad driver also for RTC pin if it is a RTC_GPIO */
            if (rtc) {
               RTCIO.pin[rtc->num].pad_driver = GPIO.pin[pin].pad_driver;
            }

            /* clear the FUN_IE bit */
            REG_CLR_BIT(_gpio_to_iomux_reg[pin], FUN_IE);

            /* FUN_GPIO / FUN_WPU / FUN_WPD are set later */
            break;

        case GPIO_IN_OUT:
        case GPIO_IN_OD:
        case GPIO_IN_OD_PU:
            /* configure GPIO signal in the GPIO matrix */
            GPIO.func_out_sel_cfg[pin].func_sel = SIG_GPIO_OUT_IDX;

            /* enable the output */
            GPIO.func_out_sel_cfg[pin].oen_sel = 1;
            GPIO_REG_BIT_SET(enable_w1ts, enable1_w1ts, pin);

            /* set pad driver to one for open drain outputs */
            GPIO.pin[pin].pad_driver = (mode == GPIO_IN_OD || mode == GPIO_IN_OD_PU) ? 1 : 0;

            /* set pad driver also for RTC pin if it is a RTC_GPIO */
            if (rtc) {
               RTCIO.pin[rtc->num].pad_driver = GPIO.pin[pin].pad_driver;
            }

            /* enable the input */
            REG_SET_BIT(_gpio_to_iomux_reg[pin], FUN_IE);

            /* FUN_GPIO / FUN_WPU / FUN_WPD are set later */
            break;
    }
    /* select GPIO as IO_MUX function (FUN_GPIO) */
    REG_SET_FIELD(_gpio_to_iomux_reg[pin], MCU_SEL, FUN_GPIO);

    /* enable/disable the pull-up resistor (FUN_WPU) */
    REG_SET_CLR_BIT(mode == GPIO_IN_PU || mode == GPIO_OD_PU || mode == GPIO_IN_OD_PU,
                    _gpio_to_iomux_reg[pin], FUN_PU);

    /* enable/disable the pull-down resistor (FUN_WPD) */
    REG_SET_CLR_BIT(mode == GPIO_IN_PD, _gpio_to_iomux_reg[pin], FUN_PD);

    /* handle pull-up/pull-down resistors for RTC_GPIOs */
    if (rtc) {
        /* enable/disable the pull-up resistor (FUN_WPU) */
        REG_SET_CLR_BIT(mode == GPIO_IN_PU || mode == GPIO_OD_PU || mode == GPIO_IN_OD_PU,
                        rtc->reg, BIT(rtc->pullup));
        /* enable/disable the pull-down resistor (FUN_WPD) */
        REG_SET_CLR_BIT(mode == GPIO_IN_PD, rtc->reg, BIT(rtc->pulldown));
    }

    return 0;
}

int gpio_init_int(gpio_t pin, gpio_mode_t mode, gpio_flank_t flank,
                  gpio_cb_t cb, void *arg)
{
    if (gpio_init(pin, mode)) {
        return -1;
    }

    gpio_isr_ctx_table[pin].cb  = cb;
    gpio_isr_ctx_table[pin].arg = arg;

    GPIO.pin[pin].int_type = flank;
    if (flank != GPIO_NONE) {
        gpio_int_enabled_table [pin] = (gpio_isr_ctx_table[pin].cb != NULL);
        GPIO.pin[pin].int_ena = GPIO_PRO_CPU_INTR_ENA;

        intr_matrix_set(PRO_CPU_NUM, ETS_GPIO_INTR_SOURCE, CPU_INUM_GPIO);
        xt_set_interrupt_handler(CPU_INUM_GPIO, gpio_int_handler, NULL);
        xt_ints_on(BIT(CPU_INUM_GPIO));
    }

    return 0;
}

int gpio_read (gpio_t pin)
{
    CHECK_PARAM_RET(pin < GPIO_PIN_NUMOF, -1);
    return GPIO_REG_BIT_GET(in, in1, pin) ? 1 : 0;
}

void gpio_write (gpio_t pin, int value)
{
    DEBUG("%s gpio=%u val=%d\n", __func__, pin, value);
    CHECK_PARAM(pin < GPIO_PIN_NUMOF);
    if (value) {
        GPIO_PIN_SET(pin);
    }
    else {
        GPIO_PIN_CLR(pin);
    }
}
